compiler/testData/diagnostics/tests/j+k/kt2619.fir.kt
//FILE: foo.kt
fun main() {
    val c: Type
    when (<!UNINITIALIZED_VARIABLE!>c<!>)  {

    }
}



//FILE: Type.java
public enum Type {
    TYPE,
    NO_TYPE;
}